@@ -38,6 +38,7 @@
 static CK_MECHANISM_TYPE supportedMechanisms[] = {
 	CKM_RSA_PKCS_KEY_PAIR_GEN,
 	CKM_RSA_PKCS,
+	CKM_RSA_X_509,
 	CKM_MD5,
 	CKM_RIPEMD160,
 	CKM_SHA_1,
